5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1573_1330.log
== TEST (2019-03-11 15:08:20) 
-- CODE:
printf(250/6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printf(250/6)
NameError: name 'printf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:29) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.131992
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:45) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.101275
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:08:52) 
-- CODE:
print(250,00/6)

-- EXECUTION TIME:
0.126583
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:08) 
-- CODE:
print(250.00/6)

-- EXECUTION TIME:
0.213363
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:12:46) 
-- CODE:
print(250/6)
round(250,2)
-- EXECUTION TIME:
0.163893
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:12:48) 
-- CODE:
print(250/6)
round(250,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:12:51) 
-- CODE:
print(250/6)
round(250,2)
-- EXECUTION TIME:
0.11085
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:13:32) 
-- CODE:
round(250,2)
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:13:35) 
-- CODE:
round(250,2)
print(250/6)
-- EXECUTION TIME:
0.143882
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:15:01) 
-- CODE:
round(250/6,2)
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:15:04) 
-- CODE:
round(250/6,2)
print(250/6)

-- EXECUTION TIME:
0.168014
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:17:47) 
-- CODE:
print(250/6)
round(256/2, 2)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:50) 
-- CODE:
print(250/6)
round(256/2, 2)


-- EXECUTION TIME:
0.134806
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:17:56) 
-- CODE:
print(250/6)
round(250/2, 2)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:17:58) 
-- CODE:
print(250/6)
round(250/2, 2)


-- EXECUTION TIME:
0.178874
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:09) 
-- CODE:
print(250/6)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:15) 
-- CODE:
print(250/6)


-- EXECUTION TIME:
0.180337
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:25) 
-- CODE:
print(250/6)



-- EXECUTION TIME:
0.167118
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:27) 
-- CODE:
print(250/6)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:54) 
-- CODE:
print(250/6)
round(41.666666664, 2)



-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:56) 
-- CODE:
print(250/6)
round(41.666666664, 2)



-- EXECUTION TIME:
0.145396
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:26) 
-- CODE:
print(250/6)
round(250/6, 2)


-- EXECUTION TIME:
0.252438
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:44) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:08) 
-- CODE:
print(250/6)
round(41.66666666664, 2)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:11) 
-- CODE:
print(250/6)
round(41.66666666664, 2)

-- EXECUTION TIME:
0.206967
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:11) 
-- CODE:
print((round 250/6, 2))
-- ERROR:
File "XXXX", line 1
    print((round 250/6, 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:31) 
-- CODE:
print((round 250/6, 2))
-- ERROR:
File "XXXX", line 1
    print((round 250/6, 2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:24:36) 
-- CODE:
print((round 250/6, 2))
-- EXECUTION TIME:
0.166798
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print((round 250/6, 2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:52) 
-- CODE:
print((round250/6, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print((round250/6, 2))
NameError: name 'round250' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:01) 
-- CODE:
print((round 250/6,2))
-- ERROR:
File "XXXX", line 1
    print((round 250/6,2))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:06) 
-- CODE:
print((round 250/6,2))
-- EXECUTION TIME:
0.149145
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print((round 250/6,2))
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:20) 
-- CODE:
print(round 250/6,2)
-- ERROR:
File "XXXX", line 1
    print(round 250/6,2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:24) 
-- CODE:
print(round 250/6,2)
-- EXECUTION TIME:
0.155087
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(round 250/6,2)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:37) 
-- CODE:
print(round (250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:47) 
-- CODE:
print(round (250/6,2))
-- EXECUTION TIME:
0.189841
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
